tests/resolver/error/duplicated_record.nk
type Ata = {
  b: Int,
  b: String
}